--- a/JavaScript & DOM/Exercise04.html
+++ b/JavaScript & DOM/Exercise04.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
-    <body>
-        <div id="maincontainer"></div>
-        <script>
 
-        </script>
-    </body>
+<head></head>
+
+<body>
+    <div id="maincontainer"></div>
+    <script>
+        document.getElementById("maincontainer").innerHTML = "Exercise 04: JavaScript&DOM";
+
+    </script>
+</body>
+
 </html>
